deployment/statefulset.yaml
apiVersion: v1
kind: Service
metadata: 
  name: db
spec:
  ports:
  - protocol: "TCP"
    port: 3306
    targetPort: 3306
  selector:
    db: mysql

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    db: mysql
spec:
  selector:
    matchLabels:
      db: mysql
  template:
    metadata:
      name: sqltemplate
      labels:
        db: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: sqlcontainer
        ports:
        - containerPort: 3306
        # envFrom:
        # - secretRef:
        #     name: dbsecret
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: local-vol
  volumeClaimTemplates:
    - metadata:
        name: local-vol
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 1Gi
