deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress
spec:
  # ingressClassName: traefik
  # rules:
  # - host: dashboard.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Exact  
  #       backend:
  #         service:
  #           name: appservice
  #           port: 
  #             number: 80


  defaultBackend:
    service:
      name: appservice 
      port:
        number: 80
